[gd_scene load_steps=9 format=3 uid="uid://7d76tlg2ifhc"]

[ext_resource type="Script" path="res://Game/HUD/HUD.gd" id="1_h86bn"]
[ext_resource type="FontFile" uid="uid://d4lwwgbtr4u4d" path="res://UI/Fonts/kenvector_future.ttf" id="2_sgao2"]
[ext_resource type="FontFile" uid="uid://cdl60ysr0ohag" path="res://UI/Fonts/kenvector_future_thin.ttf" id="2_yyky3"]
[ext_resource type="StyleBox" uid="uid://b8cipe83psfba" path="res://TRES/MenuButton-normal.tres" id="4_i1qof"]
[ext_resource type="StyleBox" uid="uid://dwh4npmbteewb" path="res://TRES/MenuButton-hover.tres" id="5_8x1cx"]
[ext_resource type="StyleBox" uid="uid://c7cry6hg1upgd" path="res://TRES/MenuButton-pressed.tres" id="6_ai4tq"]

[sub_resource type="LabelSettings" id="LabelSettings_m0wq4"]
font = ExtResource("2_yyky3")
font_color = Color(0.368627, 1, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykxyx"]
bg_color = Color(0.027451, 0.0784314, 0.0313726, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h86bn")
metadata/_edit_lock_ = true

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HeaderBG" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
color = Color(0, 0, 0, 0.784314)

[node name="HBox" type="HBoxContainer" parent="VBox/HeaderBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lives" type="HBoxContainer" parent="VBox/HeaderBG/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Space1" type="Control" parent="VBox/HeaderBG/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Score" type="Label" parent="VBox/HeaderBG/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_m0wq4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space2" type="Control" parent="VBox/HeaderBG/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Menu" type="Button" parent="VBox/HeaderBG/HBox"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.513726, 0.937255, 1)
theme_override_fonts/font = ExtResource("2_sgao2")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_i1qof")
theme_override_styles/hover = ExtResource("5_8x1cx")
theme_override_styles/pressed = ExtResource("6_ai4tq")
toggle_mode = true
text = "menu"

[node name="Space3" type="Control" parent="VBox/HeaderBG/HBox"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="GameMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Center" type="CenterContainer" parent="GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameMenu/Center"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ykxyx")

[node name="Margin" type="MarginContainer" parent="GameMenu/Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="GameMenu/Center/Panel/Margin"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="GameMenu/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sgao2")
theme_override_styles/normal = ExtResource("4_i1qof")
theme_override_styles/hover = ExtResource("5_8x1cx")
theme_override_styles/pressed = ExtResource("6_ai4tq")
text = "RESUME"

[node name="Exit" type="Button" parent="GameMenu/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sgao2")
theme_override_styles/normal = ExtResource("4_i1qof")
theme_override_styles/hover = ExtResource("5_8x1cx")
theme_override_styles/pressed = ExtResource("6_ai4tq")
text = "Exit"

[connection signal="pressed" from="VBox/HeaderBG/HBox/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GameMenu/Center/Panel/Margin/VBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GameMenu/Center/Panel/Margin/VBox/Exit" to="." method="_on_exit_pressed"]
